# pii-shield

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark_onnx.py  convert_to_onnx.py  download_model.py  infer.py  pyproject.toml  requirements.txt  server.py  train.py
docs/: index.html
raw/: expand_spans.py  main.py  postprocessing.py  train_bert.py
scripts/: run_pipeline.sh
src/pii_ner/: config.py  data.py  ema.py  export_onnx.py  inference.py  labels.py  metrics.py  mining.py  training.py
src/pii_ner/cli/: blend.py  evaluate.py  export.py  mine.py  serve.py  train.py
src/pii_ner/web/: server.py
static/: index.html
tests/: test_app.py
web/: app.js  labels.generated.js  obfuscate.js  obfuscate.test.js  styles.css
