[project]
name = "pii-ner"
version = "0.1.0"
description = "Russian PII named-entity recognition (ensemble + uncertainty mining)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
# Browser demo backend (FastAPI mock-LLM + static serving).
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
# ONNX int8 export for transformers.js (pii-export-onnx).
# NB: we export via torch.onnx (not optimum) because optimum caps transformers <4.58,
# which conflicts with the training pipeline's transformers>=5.3.
export = [
    "onnx>=1.16",
    "onnxruntime>=1.17",
]
# Test runner for the Python tests.
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
pii-train = "pii_ner.cli.train:main"
pii-evaluate = "pii_ner.cli.evaluate:main"
pii-blend = "pii_ner.cli.blend:main"
pii-mine = "pii_ner.cli.mine:main"
pii-export-onnx = "pii_ner.cli.export:main"
pii-serve = "pii_ner.cli.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_ner"]
